<?xml version="1.0"?>
<package format="2">
  <name>rslidar_laserscan</name>
  <version>1.0.0</version>
  <description>
    Extract a horizontal ring of rslidar PointCloud2 and publish it as a LaserScan message.
  </description>
  <maintainer email="ron.zheng@robosense.cn">RoboSense</maintainer>
  <author>RoboSense</author>
  <license>BSD</license>

  <buildtool_depend>rosidl_default_generators</buildtool_depend>
  <exec_depend>rosidl_default_runtime</exec_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
  
  <depend>rclcpp</depend>
  <depend>sensor_msgs</depend>
</package>
